# luos_engine

./: README.md  boot.ps1  library.json  zephyr.ps1
.github/workflows/: build.yml  cachy.yml  pio_release.yml  sandbox.yml
API/api/qapi/QApi/: docker-compose.yml
API/api/qapi/QApi/src/: Dockerfile
API/api/qapi/old_test_Bot/: testBot.py
API/nginx/: nginx.conf
API/volume/: detection.sh
CD/scripts/: create_version.py
CI/automatic_tests/: ci.py
CI/automatic_tests/tools/: LIS_MOI___misc_script_here.txt
CI/automatic_tests/tools/CapableRobot_USBHub_Driver/: pyproject.toml  requirements.txt
CI/automatic_tests/tools/luos_pytest_engine/: HUB_control.py  LoggerEngine.json  LoggerEngine.py  Platform.py  communication.py  tools.py
CI/automatic_tests/tools/pytest_luos/: A_Lire.txt  hub_controller.py  loggerEngine.py  logger_engine.py  luos_controller.py  mcu_controller.py  pytest_luos.py  termcolor.py  test_engine.py
CI/automatic_tests/tools/pytest_luos/config/: logging_configuration.json  platform.py  settings.py
CI/automatic_tests/tools/scripts/: MCU_Power.sh  N2_off.sh  N2_on.sh  N5_off.sh  N5_on.sh  N5_power_off.py  N5_power_on.py  Salae_off.sh  Salae_on.sh  Salae_power_off.py  Salae_power_on.py  capable-robot-driver.py  detection.sh  erase.py  flash.sh  mail.py  reboot_usb.sh  robot.sh  search_hub.py  stress-test.sh  upload_test.sh
CI/environment/Dockers/API/: index.html
CI/environment/Dockers/API/volume/: detection_python.sh  hello.sh  hello_wait.sh
CI/environment/Dockers/HW_env/: lire.txt
CI/environment/Dockers/QA_env/: lire.txt
Functional/Asserts/: Readme.md
Functionnal/Asserts/: Readme.md  assert_test.ipynb
Functionnal/Asserts/Assert_app/: assert_app.c
NUCLEO-F072RB/: platformio.ini
NUCLEO-F072RB/src/: gpio.c  main.c  stm32f0xx_it.c
NUCLEO-G431KB/: platformio.ini
NUCLEO-G431KB/include/: gpio.h
NUCLEO-G431KB/src/: gpio.c  main.c  stm32g4xx_it.c
NUCLEO-L432KC/src/: stm32l4xx_it.c
a_lire.md/: .txt
engine/core/inc/: service_structs.h
engine/core/src/: luos_engine.c
examples/projects/NUCLEO-L432KC/OLD_button_zephyr_OLD/: platformio.ini
examples/projects/NUCLEO-L432KC/OLD_button_zephyr_OLD/src/: gpio.c  main.c
examples/projects/NUCLEO-L432KC/OLD_button_zephyr_OLD/zephyr/: CMakeLists.txt  prj.conf
examples/projects/NUCLEO-L432KC/button_zephyr/: AAA.txt  node_config.h  platformio.ini
examples/projects/NUCLEO-L432KC/button_zephyr/boards/: nucleo_l432kc.json
examples/projects/NUCLEO-L432KC/button_zephyr/include/: gpio_l4xx.h
examples/projects/NUCLEO-L432KC/button_zephyr/src/: PROJ_2_main.c.XXX  gpio_l4xx.c  main.c  main.c.THREAD  mainc.c.MY_CODE
examples/projects/NUCLEO-L432KC/button_zephyr/zephyr/: CMakeLists.txt  Kconfig  prj.conf
examples/projects/NUCLEO-L432KC/zephyr_getstarted/: node_config.h  platformio.ini
examples/projects/NUCLEO-L432KC/zephyr_getstarted/include/: main.h
examples/projects/NUCLEO-L432KC/zephyr_getstarted/src/: main.c
examples/projects/NUCLEO-L432KC/zephyr_getstarted/zephyr/: CMakeLists.txt  Kconfig  prj.conf
examples/projects/l0/gate_serialcom/boards/: l0.json
examples/projects/native/gate_wscom/: add_sanatizer.py  log.txt
manual_tests/: README.md
manual_tests/Functional/Asserts/: Readme.md
manual_tests/Functional/Asserts/Assert_app/: assert_app.h  library.json
manual_tests/Functional/Demo/: demo_motor.ipynb
manual_tests/Functional/Examples/bike-alarm/: Connected_bike.ipynb  README.md
manual_tests/Functional/Examples/button/: README.md  button.ipynb
manual_tests/Functional/Examples/controller_motor/: README.md  controller_motor.ipynb
manual_tests/Functional/Examples/dc_motor/: README.md  dc_motor.ipynb
manual_tests/Functional/Examples/distance/: README.md  distance.ipynb
manual_tests/Functional/Examples/dxl/: README.md  dxl.ipynb
manual_tests/Functional/Examples/gpio/: README.md  gpio.ipynb
manual_tests/Functional/Examples/led/: README.md  led_test.ipynb
manual_tests/Functional/Examples/led_strip/: README.md  rainbow_led_strip.ipynb
manual_tests/Functional/Examples/light_sensor/: README.md  light_sensor.ipynb
manual_tests/Functional/Examples/load/: README.md  load.ipynb
manual_tests/Functional/Examples/potentiometer/: README.md  potentiometer_test.ipynb
manual_tests/Functional/Examples/power_switch/: README.md  power_switch.ipynb
manual_tests/Functional/Examples/servo/: README.md  servo.ipynb
manual_tests/Functional/Examples/simple_foc/: README.md  simple_foc_bldc.ipynb  simple_foc_stepper.ipynb
manual_tests/Functional/Examples/sniffer/: sniffer.ipynb
manual_tests/Functional/Examples/stepper/: README.md  stepper.ipynb
manual_tests/Robustness/: README.md
network/robus/HAL/STM32L4/: robus_hal.c  robus_hal_config.h
(+16 files in other folders)
